fix: modal settings window layout issues

--- a/packages/yasgui/src/TabSettingsModal.scss
+++ b/packages/yasgui/src/TabSettingsModal.scss
@@ -833,7 +833,7 @@
 
   input,
   select {
-    width: 100%;
+    width: 90%;
     padding: 8px 10px;
     border: 1px solid var(--yasgui-input-border, #ddd);
     border-radius: 4px;
